--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Sembakota And E-Perlinkon</a></strong>
+			<i class="fa fa-android"></i>&nbsp;&nbsp;<strong><a href="#">Sembakota And E-Perlinkon</a></strong>
 			- Working on the Android Backend and the Web API on Two Apps for Makassar City Trade Departement 
             (Disdag Makassar). Utilizing Android Java And PHP
 		</h5>
