--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,19 +6,12 @@
 		<h5>
 			<i class="fa fa-android"></i>&nbsp;&nbsp;<strong><a href="#">Sembakota And E-Perlinkon</a></strong>
 			- Working on the Android Backend and the Web API on Two Apps for Makassar City Trade Departement 
-            (Disdag Makassar). Utilizing Android Java And PHP
-		</h5>
-		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="http://kaloling.000webhostapp.com/">Kaloling Government Website</a></strong>
-			- Designing and Developing Website for Kaloling Government, A Remote Village in Bantaeng Regency Using Wordpress
+            (Disdag Makassar)
 		</h5>
     	<h5>
 			<i class="fa fa-desktop"></i>&nbsp;&nbsp;<strong><a href="#">Flight Plan</a></strong>
-			- Developed Flight Plan App Using VB .NET Utilizing Network Communication Library For .NET 
+			- Developed Flight Plan App in VB .NET Using .NET Network Communication Library
 		</h5>
-		
-
-
     </div>
   </div>
 </div>
